# moguls

./: .env.example  .gitignore  README.md  pyproject.toml
src/: manage.py
src/apps/commons/: models.py
src/apps/commons/templates/: base.html
src/apps/events/: admin.py  models.py  urls.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_alter_event_options.py  0003_alter_event_options.py
src/apps/events/templates/: events.html
src/apps/participants/: admin.py  models.py
src/apps/participants/migrations/: 0001_initial.py  0002_alter_participant_options_and_more.py
src/apps/scores/: admin.py  models.py  services.py  tests.py  urls.py  views.py
src/apps/scores/forms/: add_score.py  edit_score.py
src/apps/scores/migrations/: 0001_initial.py  0002_alter_score_air_score_alter_score_event_and_more.py  0003_remove_score_total_score.py  0004_alter_score_air_score_alter_score_time_score_and_more.py  0005_alter_score_options_score_event_index.py
src/apps/scores/services/: __init__.py  add_participant_score.py  default_event_ranking_service.py  edit_participant_score.py
src/apps/scores/templates/: add_score.html  edit_score.html  ranking.html
src/apps/scores/tests/: tests_add_participant_score.py  tests_ranking_by_score_and_name.py
src/apps/scores/views/: __init__.py  add_score_view.py  edit_score_view.py  event_ranking_view.py
src/apps/users/: models.py
src/apps/users/migrations/: 0001_initial.py
src/moguls/: asgi.py  settings.py  urls.py  wsgi.py
src/moguls/settings/: base.py  dev.py
(+1 files in other folders)
