[project]
name = "moguls"
version = "0.1.0"
description = "Freestyle Moguls Competition Scoring System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "ipython>=9.6.0",
]
